# simple-ffmpeg-and-sdl-player

./: CMakeLists.txt  ffmpeg_sdl .cpp_backup  ffmpeg_sdl.cpp  ffmpeg_sdl.h  output.h264
